2017-10-05  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (M_LIMBS, limbs_M, MAX_A_LIMBS)
	(limbs_MAX_A, mpi_gen_prime): Fix for 64-bit machine.

2017-10-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure (output_vendor_product_serial_strings): Support
	GNU/Linux emulation.

	* polarssl/library/bignum.c (mpi_div_mpi): Fix for 64-bit machine.

	* src/main.c (gnuk_malloc, gnuk_free): Fix for 64-bit machine.

	* src/stack-def.h (SIZE_3): Tweak the size.

	* src/openpgp-do.c (gpg_do_keygen): Do RSA key generation in two
	steps.

	* src/call-rsa.c (rsa_genkey_start, rsa_genkey_finish): New.
	(rsa_genkey): Remove.

2017-10-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/call-ec.c (ecc_compute_public): No use of malloc.
	* src/call-rsa.c (modulus_calc, rsa_genkey): Likewise.
	* src/ecc-edwards.c (eddsa_compute_public_25519): Likewise.
	* src/ecc-mont.c (ecdh_compute_public_25519): Likewise.
	* src/openpgp-do.c (gpg_do_write_prvkey, gpg_do_chks_prvkey)
	(proc_key_import, gpg_do_keygen): Likewise.

	* polarssl/library/rsa.c: Don't include stdlib.h.
	* src/gnuk-malloc.h: Rename from stdlib.h.
	* polarssl/library/bignum.c: Include gnuk-malloc.h.

	* src/Makefile (build/flash.data): Generate.

	* src/main.c (flash_addr_key_storage_start)
	(flash_addr_data_storage_start): New.
	(main): Determine flash address.

	* src/flash.c (FLASH_ADDR_KEY_STORAGE_START)
	(FLASH_ADDR_DATA_STORAGE_START): New.
	(flash_do_storage_init, flash_terminate, flash_activate)
	(flash_key_storage_init, flash_copying_gc, flash_do_release)
	(flash_key_getpage): Use new macros.

2017-10-02  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (device_initialize_once): Not for GNU/Linux.

	* src/openpgp.c, src/flash.c: Distinguish FLASH_UPGRADE_SUPPORT.

	* src/main.c [GNU_LINUX_EMULATION]: Use emulated_main.
	(MEMORY_SIZE, MEMORY_END): Fix for GNU/Linux.

	* src/usb-ccid.c (INTR_REQ_USB): Fix for GNU/Linux.

	* polarssl/library/bignum.c (mpi_montsqr): Easy C implementation.
