@@ -1,0 +1,48 @@
+#! /bin/sh
+#
+# gnuk-emulation-setup - Generate flash image for Gnuk
+#
+# Copyright (C) 2017  Free Software Initiative of Japan
+# Author: NIIBE Yutaka <gniibe@fsij.org>
+#
+# This file is a part of Gnuk, a GnuPG USB Token implementation.
+#
+# Gnuk is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# Gnuk is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
+# License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+if test "$1" = "--help"; then
+    echo "Usage:"
+    echo "	$0 [output-file]"
+    echo "		Generate Gnuk flash image"
+    echo "	$0 --help"
+    echo "		Show this message"
+    exit 0
+fi
+
+OUTPUT_FILE=${1:-$HOME/.gnuk-flash-image}
+
+# Generate 8192-byte flash data into OUTPUT_FILE
+
+exec > $OUTPUT_FILE
+
+for i in $(seq 512); do
+    /bin/echo -n -e '\xff\xff\xff\xff\xff\xff\xff\xff'
+done
+
+/bin/echo -n -e '\x00\x00\xff\xff\xff\xff\xff\xff'
+
+for i in $(seq 511); do
+    /bin/echo -n -e '\xff\xff\xff\xff\xff\xff\xff\xff'
+done
+
+chmod og-rw $OUTPUT_FILE
